--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.9",
+        "intervention/image": "^3.11",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/commonmark": "^2.7",
         "symfony/http-client": "^7.2",
         "symfony/mailgun-mailer": "^7.2",
         "wildbit/postmark-php": "^6.0"
