--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/commonmark": "^2.7",
+        "spatie/laravel-sitemap": "^7.3",
         "symfony/http-client": "^7.2",
         "symfony/mailgun-mailer": "^7.2",
         "wildbit/postmark-php": "^6.0"
