Changed the app preferences

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
   "name": "Vizzbud",
   "short_name": "Vizzbud",
-  "start_url": "/",
+  "start_url": "/dive-sites",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#0f172a",
   "theme_color": "#06b6d4",
   "description": "Explore dive site conditions, forecasts and guides for divers across Australia.",
