Looking at options

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Vizzbud",
   "short_name": "Vizzbud",
   "start_url": "/dive-sites",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "portrait",
   "background_color": "#0f172a",
   "theme_color": "#06b6d4",
