--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Vizzbud",
   "short_name": "Vizzbud",
-  "start_url": "/dive-sites",
+  "start_url": "/dive-map",
   "orientation": "portrait",
   "background_color": "#0f172a",
   "theme_color": "#06b6d4",
